# graphic_standard

./: .clang-format  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  default.scss  flutter.gni  graphic.cfg  graphic_config.gni  hisysevent.yaml  ohos.build
frameworks/animation_server/: BUILD.gn
frameworks/bootanimation/: BUILD.gn
frameworks/bootanimation/data/: generate_raw.sh
frameworks/bootanimation/include/: boot_animation.h  raw_parser.h  util.h
frameworks/bootanimation/src/: boot_animation.cpp  main.cpp  raw_parser.cpp  util.cpp
frameworks/dumper/: BUILD.gn  gdumper.ini
frameworks/dumper/include/: graphic_dumper_command_line.h  graphic_dumper_helper_impl.h  graphic_dumper_hilog.h  graphic_dumper_server.h  graphic_dumper_tree.h  graphic_dumper_util.h
frameworks/dumper/src/: graphic_dumper_command_line.cpp  graphic_dumper_command_line_main.cpp  graphic_dumper_helper.cpp  graphic_dumper_helper_impl.cpp  graphic_dumper_server.cpp  graphic_dumper_server_main.cpp  graphic_dumper_tree.cpp  graphic_dumper_util.cpp
frameworks/surfaceimage/: BUILD.gn
frameworks/surfaceimage/include/: surface_image.h
frameworks/surfaceimage/src/: surface_image.cpp
frameworks/vsync/: BUILD.gn
frameworks/vsync/include/: ivsync_callback.h  ivsync_manager.h  return_value_tester.h  static_call.h  vsync_callback_stub.h  vsync_helper_impl.h  vsync_log.h  vsync_manager.h  vsync_manager_proxy.h  vsync_module_impl.h
frameworks/vsync/src/: drm_module.cpp  static_call.cpp  vsync_callback_proxy.cpp  vsync_callback_stub.cpp  vsync_helper.cpp  vsync_helper_impl.cpp  vsync_manager.cpp  vsync_manager_proxy.cpp  vsync_module_c.cpp  vsync_module_impl.cpp
frameworks/wm/: BUILD.gn
frameworks/wm/include/: input_listener_manager.h  multimodal_listener_manager.h  singleton_container.h  singleton_delegator.h  static_call.h  subwindow_normal_impl.h  subwindow_option_impl.h  subwindow_video_impl.h  tester.h  virtual_display_option_impl.h  wayland_service.h  window_attribute.h  window_impl.h  window_manager_impl.h  window_manager_server.h  window_option_impl.h  wl_buffer.h  wl_buffer_cache.h  wl_display.h  wl_dma_buffer_factory.h  wl_subsurface.h  wl_surface.h  wl_surface_factory.h
frameworks/wm/src/: input_listener_manager.cpp  log_listener.cpp  multimodal_listener_manager.cpp  singleton_container.cpp  static_call.cpp  subwindow_normal_impl.cpp  subwindow_option_impl.cpp  subwindow_video_impl.cpp  tester.cpp  virtual_display_option.cpp  virtual_display_option_impl.cpp  wayland_service.cpp  window_attribute.cpp  window_impl.cpp  window_manager_impl.cpp  window_manager_server.cpp  window_manager_test.cpp  window_option_impl.cpp  wl_buffer.cpp  wl_buffer_cache.cpp  wl_display.cpp  wl_dma_buffer_factory.cpp  wl_shm_buffer.cpp  wl_shm_buffer_factory.cpp  wl_subsurface.cpp  wl_surface.cpp  wl_surface_factory.cpp
frameworks/wmserver/: BUILD.gn
frameworks/wmserver/protocol/: wms.xml
frameworks/wmserver/src/: layout_controller.cpp  layout_controller.h  layout_header.cpp  layout_header.h  rects.cpp  rects.h  screen_info.c  screen_info.h  screen_info_test.c  split_mode.cpp  split_mode.h  wmserver.c  wmserver.h
frameworks/wmservice/: BUILD.gn
frameworks/wmservice/include/: window_manager_service_client_impl.h  window_manager_service_proxy.h
frameworks/wmservice/src/: window_manager_service_client_impl.cpp  window_manager_service_proxy.cpp
frameworks/wmtest/: BUILD.gn
frameworks/wmtest/frameworks/: egl_native_test_class.cpp  egl_native_test_class.h  inative_test.cpp  inative_test.h  inative_test_ipc.h  inative_test_key_event_handler.h  inative_test_touch_event_handler.h  main.cpp  main_option.cpp  main_option.h  native_test_class.cpp  native_test_class.h  native_test_ipc_proxy.cpp  native_test_ipc_proxy.h  native_test_ipc_stub.cpp  native_test_ipc_stub.h  util.cpp  util.h
frameworks/wmtest/test/: crash_native_test_1.cpp  crash_native_test_1.h  crash_native_test_2.cpp  crash_native_test_2.h  dumper_test_1.cpp  dumper_test_1.h  other_native_test_1.cpp  other_native_test_1.h  pref_native_test_1.cpp  pref_native_test_1.h  vsync_native_test_1.cpp  vsync_native_test_1.h  wmclient_native_test_1.cpp  wmclient_native_test_1.h  wmclient_native_test_10.cpp  wmclient_native_test_10.h  wmclient_native_test_11.cpp  wmclient_native_test_11.h  wmclient_native_test_12.cpp  wmclient_native_test_12.h  wmclient_native_test_13.cpp  wmclient_native_test_13.h  wmclient_native_test_14.cpp  wmclient_native_test_14.h  wmclient_native_test_15.cpp  wmclient_native_test_15.h  wmclient_native_test_16.cpp  wmclient_native_test_16.h  wmclient_native_test_17.cpp  wmclient_native_test_17.h  wmclient_native_test_18.cpp  wmclient_native_test_18.h  wmclient_native_test_19.cpp  wmclient_native_test_19.h  wmclient_native_test_2.cpp  wmclient_native_test_2.h  wmclient_native_test_20.cpp  wmclient_native_test_20.h  wmclient_native_test_21.cpp  wmclient_native_test_21.h  (+47 more)
rosen/modules/2d_graphics/: BUILD.gn
rosen/modules/composer/: BUILD.gn
rosen/modules/render_service/: BUILD.gn  README.md
rosen/modules/render_service_base/: BUILD.gn  README.md  config.gni
rosen/modules/render_service_client/: BUILD.gn  README.md  render_service_client.gni  rosen_test.cpp
rosen/samples/2d_graphics/: BUILD.gn  drawing_c_sample.cpp  drawing_engine_sample.cpp  drawing_engine_sample.h  drawing_sample_canvaskit0310.cpp  drawing_sample_rs.cpp  render_context_sample.cpp  render_context_sample.h
utils/: BUILD.gn
utils/buffer_handle/: BUILD.gn
utils/buffer_handle/src/: buffer_handle.cpp
utils/bytrace/: BUILD.gn
utils/bytrace/export/: graphic_bytrace.h
utils/bytrace/src/: graphic_bytrace.cpp
utils/color_manager/: BUILD.gn
utils/cpudraw/: BUILD.gn
utils/gslogger/: BUILD.gn
utils/include/: promise.h
utils/lex_yacc/: gen_flexlexer_header.py  gen_lex_cpp.py  gen_yacc_cpp.py  lex_yacc.gni
utils/raw_parser/: BUILD.gn
utils/scoped_bytrace/: BUILD.gn
utils/semaphore/: BUILD.gn
utils/src/: buffer_handle.cpp
utils/sync_fence/: BUILD.gn
utils/test_header/: BUILD.gn
utils/wmlayout/: wmlayout.gni
(+938 files in other folders)
