# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/standard/utils/wmlayout/wmlayout.gni")
import("graphic_config.gni")

group("default") {
  public_deps = [
    ":default.scss",
    ":graphic.rc",
    "frameworks/animation_server:animation_server",
    "frameworks/animation_server:cursor.raw",
    "frameworks/bootanimation:bootanimation",
    "frameworks/bootanimation:bootanimation-480x960.raw",
    "frameworks/dumper:gdumper",
    "frameworks/dumper:gdumper.ini",
    "frameworks/dumper:graphic_dumper_server",
    "frameworks/vsync:vsync_server",
    "frameworks/wmserver:screen-info-test",
    "frameworks/wmserver:wmserver",
    "frameworks/wmservice:wmservice_test",
  ]
}

group("graphic_standard_test") {
  testonly = true

  public_deps = [
    "frameworks/fence:test",
    "frameworks/surface:test",
    "frameworks/vsync:test",
    "frameworks/wmtest:wmtest",
    "rosen/modules/composer:test",
  ]
}

## Install graphic.rc to /system/etc/init/graphic.rc {{{
ohos_prebuilt_etc("graphic.rc") {
  source = "graphic.cfg"
  relative_install_dir = "init"
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Install graphic.rc to /system/etc/init/graphic.rc }}}

## Install default.scss to /system/etc/wmlayout.d/default.scss {{{
wmlayout_scss("default.scss") {
  scss = "default.scss"
  part_name = "graphic_standard"
  subsystem_name = "graphic"
}

## Install default.scss to /system/etc/wmlayout.d/default.scss }}}

group("libsurface") {
  public_deps = [ "frameworks/surface:surface" ]
}

group("libvsync_client") {
  public_deps = [ "frameworks/vsync:libvsync_client" ]
}

group("libwms_client") {
  public_deps = [ "frameworks/wm:wms_client" ]
}

group("libwmclient") {
  public_deps = [ "frameworks/wm:libwmclient" ]
}

group("libwmservice") {
  public_deps = [ "frameworks/wmservice:libwmservice" ]
}

group("libfence") {
  public_deps = [ "frameworks/fence:libfence" ]
}

group("libgl") {
  public_deps = [
    "//third_party/EGL:libEGL",
    "//third_party/openGLES:libGLES",
  ]
  public_deps += libgl
}

group("libgraphic_dumper_client") {
  public_deps = [ "frameworks/dumper:libgraphic_dumper_client" ]
}
