# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if ("${product_name}" == "watchos" || "${product_name}" == "Hi3516DV300" ||
    "${product_name}" == "ohos-arm64" || "${product_name}" == "ohos-sdk" ||
    "${product_name}" == "qemu-arm-linux-min") {
  gpu_defines = [ "ACE_DISABLE_GL" ]
  ace_enable_gpu = false
  libgl = []
} else if ("${product_name}" == "rk3566" || "${product_name}" == "rk3568") {
  gpu_defines = [ "ACE_ENABLE_GL" ]
  ace_enable_gpu = true
  libgl = [ "//device/hihope/hardware/gpu:mali-bifrost-g52-g2p0-ohos" ]
} else {
  gpu_defines = [ "ACE_ENABLE_GL" ]
  ace_enable_gpu = true
  libgl = [ "//device/hisilicon/hardware/gpu:gpu_libs" ]
}
