# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  graphic_standard_feature_ace_enable_gpu = false
}

if (graphic_standard_feature_ace_enable_gpu) {
  gpu_defines = [
    "ACE_ENABLE_GL",
    "RS_ENABLE_GL",
  ]
  ace_enable_gpu = true
  rs_enable_gpu = true

  # libgl is a native stub for decoupling system.img and vendor.img
  # real libgl installed in /vendor/lib/chipsetsdk
  libgl = [
    "//foundation/graphic/standard/frameworks/opengl/libs/EGL:libEGL_stub",
    "//foundation/graphic/standard/frameworks/opengl/libs/GLES3:libGLESv3_stub",
  ]
} else {
  gpu_defines = [ "ACE_DISABLE_GL" ]
  ace_enable_gpu = false
  rs_enable_gpu = false
  libgl = []
}
